--- a/results/report.html
+++ b/results/report.html
@@ -1887,36 +1887,22 @@ storage = function () {
 window.output = {};
 </script>
 <script type="text/javascript">
-<<<<<<< HEAD
-window.output["suite"] = [1,2,3,0,[],[0,0,2390],[[4,5,6,0,[],[0,29,2361],[],[[7,0,0,[],[0,330,2058,8],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
-=======
-window.output["suite"] = [1,2,3,0,[],[0,0,58334],[[4,5,6,0,[],[0,27,58306],[],[[7,0,0,[],[0,355,57976,8],[]]],[],[1,0,1,0]]],[],[],[1,0,1,0]];
->>>>>>> a230f5b275563e51b92cb89debdf3ccfaad33344
+window.output["suite"] = [1,2,3,0,[],[0,0,6440],[[4,5,6,0,[],[0,29,2421],[],[[7,0,0,[],[0,328,2120,8],[]]],[],[1,0,1,0]],[9,10,11,0,[],[0,2451,1924],[],[[12,0,0,[],[0,2453,1921,8],[]]],[],[1,0,1,0]],[13,14,15,0,[],[0,4376,2063],[],[[16,0,0,[],[0,4380,2058,17],[]]],[],[1,0,1,0]]],[],[],[3,0,3,0]];
 </script>
 <script type="text/javascript">
 window.output["strings"] = [];
 </script>
 <script type="text/javascript">
-window.output["strings"] = window.output["strings"].concat(["*","*Suites","*C:\\Users\\debor\\Documents\\automacao\\primeiroProjectPython\\tests\\suites","*../tests/suites","*Login","*C:\\Users\\debor\\Documents\\automacao\\primeiroProjectPython\\tests\\suites\\login.robot","*../tests/suites/login.robot","*Login válido","*Element with locator 'id=username' not found."]);
+window.output["strings"] = window.output["strings"].concat(["*","*Suites","*C:\\Users\\debor\\Documents\\automacao\\primeiroProjectPython\\tests\\suites","*../tests/suites","*addCarrinho","*C:\\Users\\debor\\Documents\\automacao\\primeiroProjectPython\\tests\\suites\\addCarrinho.robot","*../tests/suites/addCarrinho.robot","*Adicionar MacBook ao carrinho","*Element with locator 'name=search' not found.","*Busca","*C:\\Users\\debor\\Documents\\automacao\\primeiroProjectPython\\tests\\suites\\busca.robot","*../tests/suites/busca.robot","*Buscar Laptop","*Login","*C:\\Users\\debor\\Documents\\automacao\\primeiroProjectPython\\tests\\suites\\login.robot","*../tests/suites/login.robot","*Login inválido","*Link with locator 'My Account' not found."]);
 </script>
 <script type="text/javascript">
-<<<<<<< HEAD
-window.output["stats"] = [[{"elapsed":"00:00:02","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:02","fail":1,"id":"s1","label":"Suites","name":"Suites","pass":0,"skip":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1","label":"Suites.Login","name":"Login","pass":0,"skip":0}]];
+window.output["stats"] = [[{"elapsed":"00:00:06","fail":3,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:06","fail":3,"id":"s1","label":"Suites","name":"Suites","pass":0,"skip":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s1","label":"Suites.addCarrinho","name":"addCarrinho","pass":0,"skip":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s2","label":"Suites.Busca","name":"Busca","pass":0,"skip":0},{"elapsed":"00:00:02","fail":1,"id":"s1-s3","label":"Suites.Login","name":"Login","pass":0,"skip":0}]];
 </script>
 <script type="text/javascript">
-window.output["baseMillis"] = 1759179245394;
+window.output["baseMillis"] = 1759180661366;
 </script>
 <script type="text/javascript">
-window.output["generated"] = 2411;
-=======
-window.output["stats"] = [[{"elapsed":"00:00:58","fail":1,"label":"All Tests","pass":0,"skip":0}],[],[{"elapsed":"00:00:58","fail":1,"id":"s1","label":"Suites","name":"Suites","pass":0,"skip":0},{"elapsed":"00:00:58","fail":1,"id":"s1-s1","label":"Suites.Login","name":"Login","pass":0,"skip":0}]];
-</script>
-<script type="text/javascript">
-window.output["baseMillis"] = 1759174343780;
-</script>
-<script type="text/javascript">
-window.output["generated"] = 58368;
->>>>>>> a230f5b275563e51b92cb89debdf3ccfaad33344
+window.output["generated"] = 6468;
 </script>
 <script type="text/javascript">
 window.output["expand_keywords"] = null;
